--- a/index.html
+++ b/index.html
@@ -1,14 +1,59 @@
 <!doctype html>
-<html>
+<html lang="en">
+    
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>JavaScript Quiz</title>
-<meta name="description" content="Our first page">
-<meta name="keywords" content="html tutorial template">
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>JavaScript Quiz</title>   
 </head>
+
+
 <body>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script src="./assets/script.js"></script>
 </body>
 </html>
