--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html lang="en">
-    
+
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./assets/style.css">
-    <title>JavaScript Quiz</title>   
+    <title>🌟 Code Quiz 🌟</title>   
+    <img id="brainy" src=""
 </head>
 
 
