inserted favicon img

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:wght@100&display=swap">
     <title>🌟 Code Quiz 🌟</title>   
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <img id="brainy" src="assets/images/brainy.png" width ="500" height ="350"
      alt="white background with Quiz in white writing in the center">
 </head>
