--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <span id="player-score">0</span>
       <span></span>
       <span id="total-score">0</span>
+      <div id="count">Start</div>
       </div>
 
   <div class="main" id="quiz-question">
@@ -37,15 +38,9 @@
     <button class="btn btn-submit" id="Submit">Submit</button>
 
   </div>
-</body>
-
-  
-
-
-
 
 
 <!--JavaScript-->
 <script src="./assets/script.js"> </script>
-
+</body>
 </html>
